Fix border-color on mobile devices

--- a/modern.css
+++ b/modern.css
@@ -116,7 +116,7 @@
     flex: 1 1 auto !important;
     min-width: 0 !important;
     padding: 2px 6px 2px 10px !important;
-    border-left: 1px solid #f6f6f6 !important;
+    border-left: 1px solid #eee !important;
     overflow: hidden !important;
     text-align: left !important;
   }
